# synthetic-panel

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/ideation/: 2026-07-11-synthetic-panel-next-directions-ideation.html
docs/plans/: 2026-07-15-008-feat-uncertainty-aware-results-plan.md
examples/: email_subject_trio.json  pricing_page_trio.json  saas_headline_trio.json
scripts/: release_gate.sh
skill/ce-synthetic-panel-beta/: SKILL.md
synthetic_panel/: __init__.py  cli.py  config.py  embeddings.py  scoring.py  testing.py
synthetic_panel/data/: anchors.default.yaml  personas.example.yaml
tests/: test_anchor_ranking.py  test_genericization.py  test_persona_validation.py  test_seam.py
